tutorials/en/foundation/7.1/all-tutorials.md
---
layout: tutorial
title: All Tutorials
weight: 1
---

### <a href="{{site.baseurl}}/tutorials/en/foundation/7.1/setting-up-your-development-environment/">Setting up your development environment</a>
<p>Set up your development environment to work with IBM MobileFirst Platform Foundation.</p>

* <a href="{{site.baseurl}}/tutorials/en/foundation/7.1/setting-up-your-development-environment/setting-up-the-mobilefirst-development-environment/">Setting up the MobileFirst development environment</a>
* <a href="{{site.baseurl}}/tutorials/en/foundation/7.1/setting-up-your-development-environment/setting-up-the-ios-development-environment/">Setting up the iOS development environment</a>
* <a href="{{site.baseurl}}/tutorials/en/foundation/7.1/setting-up-your-development-environment/setting-up-the-android-development-environment/">Setting up the Android development environment</a>
* <a href="{{site.baseurl}}/tutorials/en/foundation/7.1/setting-up-your-development-environment/setting-up-the-blackberry-10-development-environment/">Setting up the BlackBerry 10 development environment</a>
* <a href="{{site.baseurl}}/tutorials/en/foundation/7.1/setting-up-your-development-environment/setting-up-the-windows-8-and-windows-phone-8-development-environment/">Setting up the Windows Phone 8 development environment</a>
* <a href="{{site.baseurl}}/tutorials/en/foundation/7.1/setting-up-your-development-environment/setting-up-the-windows-8-and-windows-phone-8-development-environment/">Setting up the Windows 8 Universal development environment</a>

### <a href="{{site.baseurl}}/tutorials/en/foundation/7.1/hello-world/">Hello World</a>
<p>Create your first MobileFirst app and preview it in different mobile operating systems.</p>

* <a href="{{site.baseurl}}/tutorials/en/foundation/7.1/hello-world/your-first-hybrid-application/">Your first hybrid application</a>
* <em>REVISED: </em><a href="{{site.baseurl}}/tutorials/en/foundation/7.1/hello-world/previewing-your-hybrid-application/">Previewing your hybrid application</a>
* <em>UPDATED: </em><a href="{{site.baseurl}}/tutorials/en/foundation/7.1/hello-world/introduction-to-mobilefirst-platform-operations-console/">Introduction to MobileFirst Operations Console</a>
* <em>UPDATED: </em><a href="{{site.baseurl}}/tutorials/en/foundation/7.1/hello-world/configuring-a-native-ios-application-with-the-mfp-sdk/"> Configuring a native iOS application with the MobileFirst Platform SDK</a>
* <em>UPDATED: </em><a href="{{site.baseurl}}/tutorials/en/foundation/7.1/hello-world/configuring-a-native-android-application-with-the-mfp-sdk/"> Configuring a native Android application with the MobileFirst Platform SDK</a>
* <em>UPDATED: </em><a href="{{site.baseurl}}/tutorials/en/foundation/7.1/hello-world/configuring-a-native-windows-phone-8-application-with-the-mfp-sdk/">Configuring a native Windows Phone 8 application with the MobileFirst Platform SDK</a>
* <em>UPDATED: </em><a href="{{site.baseurl}}/tutorials/en/foundation/7.1/hello-world/configuring-a-native-windows-8-application-with-the-mfp-sdk/">Configuring a native Windows 8 Universal application with the MobileFirst Platform SDK</a>
* <em>NEW: </em><a href="{{site.baseurl}}/tutorials/en/foundation/7.1/hello-world/integrating-mfpf-sdk-in-cordova-applications/">Integrating MobileFirst Platform Foundation SDK in Cordova Applications</a>
* <em>NEW:</em> <a href="{{site.baseurl}}/tutorials/en/foundation/7.1/mobilefirstplatform/documentation/getting-started-7-1/hello-world/connecting-to-mobilefirst-server/">Connecting to MobileFirst Server</a>

### <a href="{{site.baseurl}}/tutorials/en/foundation/7.1/client-side-development-basics/">Hybrid client-side development basics</a>
<p>Use basic MobileFirst APIs to develop Hybrid your apps, build a multipage application, work with the user interface framework, and debug and optimize your apps.</p>

* <a href="{{site.baseurl}}/tutorials/en/foundation/7.1/client-side-development-basics/hybrid-applications-client-side-api-basics/">Hybrid applications client-side API basics</a>
* <a href="{{site.baseurl}}/tutorials/en/foundation/7.1/client-side-development-basics/building-a-multipage-application/">Building a multi-page application</a>
* <a href="{{site.baseurl}}/tutorials/en/foundation/7.1/client-side-development-basics/working-with-ui-frameworks/">Working with UI frameworks</a>
* <a href="{{site.baseurl}}/tutorials/en/foundation/7.1/client-side-development-basics/debugging-applications/">Debugging applications</a>
* <a href="{{site.baseurl}}/tutorials/en/foundation/7.1/client-side-development-basics/optimizing-your-application-for-various-environments/">Optimizing your application for various environments</a>
* <a href="{{site.baseurl}}/tutorials/en/foundation/7.1/client-side-development-basics/general-information-when-developing-for-ios/">General information when developing for iOS</a>
* <a href="{{site.baseurl}}/tutorials/en/foundation/7.1/client-side-development-basics/general-information-when-developing-for-android/">General information when developing for Android</a>
* <a href="{{site.baseurl}}/tutorials/en/foundation/7.1/client-side-development-basics/general-information-when-developing-for-blackberry-10/">General information when developing for BlackBerry 10</a>
* <a href="{{site.baseurl}}/tutorials/en/foundation/7.1/client-side-development-basics/general-information-when-developing-for-windows-phone-8/">General information when developing for Windows Phone 8</a>
* <em>NEW:</em> <a href="{{site.baseurl}}/tutorials/en/foundation/7.1/client-side-development-basics/general-information-when-developing-for-windows-universal/">General information when developing for Windows 8 Universal</a>
* <a href="{{site.baseurl}}/tutorials/en/foundation/7.1/client-side-development-basics/general-information-when-developing-mobile-web-applications/">General information when developing Mobile Web applications</a>
* <a href="{{site.baseurl}}/tutorials/en/foundation/7.1/client-side-development-basics/general-information-for-developing-desktop-applications/">General information when developing desktop applications</a>

### <a href="{{site.baseurl}}/tutorials/en/foundation/7.1/advanced-client-side-development/">Advanced client-side development</a>
<p>Implement different features in your mobile app, such as controls, skins, offline access, translation, and encryption of sensitive data. Develop your client application by using native APIs.</p>

* <a href="{{site.baseurl}}/tutorials/en/foundation/7.1/advanced-client-side-development/overview-of-client-technologies/">Overview of client technologies</a>
* <a href="{{site.baseurl}}/tutorials/en/foundation/7.1/advanced-client-side-development/common-ui-controls/">Common UI controls</a>
* <a href="{{site.baseurl}}/tutorials/en/foundation/7.1/advanced-client-side-development/supporting-multiple-form-factors-using-skins/">Supporting multiple form-factors using skins</a>
* <a href="{{site.baseurl}}/tutorials/en/foundation/7.1/advanced-client-side-development/enabling-translation/">Translation</a>
* <a href="{{site.baseurl}}/tutorials/en/foundation/7.1/advanced-client-side-development/using-direct-update-to-quickly-update-your-application/">Using Direct Update to quickly update your application</a>
* <em>UPDATED: </em><a href="{{site.baseurl}}/tutorials/en/foundation/7.1/advanced-client-side-development/updated-using-cli-to-create-build-and-manage-mobilefirst-project-artifacts/">Using CLI to create, build, and manage MobileFirst project artifacts</a>
* <em>UPDATED: </em><a href="{{site.baseurl}}/tutorials/en/foundation/7.1/advanced-client-side-development/remote-controlled-client-side-log-collection/">Remote controlled client-side log collection</a>
    * <a href="{{site.baseurl}}/tutorials/en/foundation/7.1/advanced-client-side-development/remote-controlled-client-side-log-collection/logging-in-native-android/" target="_blank">Logging in native Android (Java)</a>
    * <a href="{{site.baseurl}}/tutorials/en/foundation/7.1/advanced-client-side-development/remote-controlled-client-side-log-collection/logging-in-native-ios/" target="_blank">Logging in native iOS (Objective-C)</a>
    * <a href="{{site.baseurl}}/tutorials/en/foundation/7.1/advanced-client-side-development/remote-controlled-client-side-log-collection/logging-in-mobilefirst-hybrid-applications/" target="_blank">Logging in MobileFirst hybrid applications (JavaScript)</a>

* <a href="{{site.baseurl}}/tutorials/en/foundation/7.1/advanced-client-side-development/shell-development-concepts/">Shell development concepts</a>
    * <a href="{{site.baseurl}}/tutorials/en/foundation/7.1/advanced-client-side-development/shell-development-concepts/ios-shell-development/">iOS shell development</a>
    * <a href="{{site.baseurl}}/tutorials/en/foundation/7.1/advanced-client-side-development/shell-development-concepts/android-shell-development/">Android shell development</a>

* Location services
    * <a href="{{site.baseurl}}/tutorials/en/foundation/7.1/advanced-client-side-development/location-services-hybrid-applications/">Location services in hybrid applications</a>
    * <a href="{{site.baseurl}}/tutorials/en/foundation/7.1/advanced-client-side-development/location-services-native-android-applications/">Location services in native Android applications</a>
    * <a href="{{site.baseurl}}/tutorials/en/foundation/7.1/advanced-client-side-development/location-services-native-ios-applications/">Location services in native iOS applications</a>

### <a href="{{site.baseurl}}/tutorials/en/foundation/7.1/server-side-development-category/">Server-side development</a>
<p>Develop the server code (adapters) that your mobile app requires to integrate with enterprise back-end applications and cloud services.</p>

* <a href="{{site.baseurl}}/tutorials/en/foundation/7.1/server-side-development-category/adapter-framework-overview/">Adapters overview</a>
* <a href="{{site.baseurl}}/tutorials/en/foundation/7.1/server-side-development-category/javascript-adapters/">JavaScript adapters</a>
    * <a href="{{site.baseurl}}/tutorials/en/foundation/7.1/server-side-development-category/javascript-adapters/js-http-adapter/">JavaScript HTTP Adapter</a>
    * <a href="{{site.baseurl}}/tutorials/en/foundation/7.1/server-side-development-category/javascript-adapters/js-sql-adapter/">JavaScript SQL Adapter</a>
    * <a href="{{site.baseurl}}/tutorials/en/foundation/7.1/server-side-development-category/javascript-adapters/js-cast-iron-adapter/">JavaScript Cast Iron Adapter</a>
    * <a href="{{site.baseurl}}/tutorials/en/foundation/7.1/server-side-development-category/javascript-adapters/js-jms-adapter/">JavaScript JMS Adapter</a>
    * <a href="{{site.baseurl}}/tutorials/en/foundation/7.1/server-side-development-category/javascript-adapters/using-java-adapters/">Using Java in JavaScript adapters</a>

* <a href="{{site.baseurl}}/tutorials/en/foundation/7.1/server-side-development-category/java-adapter/">Java Adapters</a>
    * <a href="{{site.baseurl}}/tutorials/en/foundation/7.1/server-side-development-category/java-adapter/java-http-adapter/">Java HTTP adapter</a>
    * <a href="{{site.baseurl}}/tutorials/en/foundation/7.1/server-side-development-category/java-adapter/java-sql-adapter/">Java SQL adapter</a>

* Invoking adapter procedures
    * <a href="{{site.baseurl}}/tutorials/en/foundation/7.1/server-side-development-category/invoking-adapter-procedures-hybrid-client-applications/">Resource request from hybrid client applications</a>
    * <a href="{{site.baseurl}}/tutorials/en/foundation/7.1/server-side-development-category/invoking-adapter-procedures-native-ios-swift-applications/">Resource request from native iOS Swift applications</a>
    * <a href="{{site.baseurl}}/tutorials/en/foundation/7.1/server-side-development-category/invoking-adapter-procedures-native-ios-applications/">Resource request from native iOS Objective-C applications</a>
    * <a href="{{site.baseurl}}/tutorials/en/foundation/7.1/server-side-development-category/invoking-adapter-procedures-native-android-applications/">Resource request from native Android applications</a>
    * <em>UPDATED: </em><a href="{{site.baseurl}}/tutorials/en/foundation/7.1/server-side-development-category/invoking-adapter-procedures-native-windows-phone-8-applications/">Resource request from native Windows Phone 8 applications</a>
    * <em>UPDATED: </em><a href="{{site.baseurl}}/tutorials/en/foundation/7.1/server-side-development-category/invoking-adapter-procedures-native-windows-8-applications/">Resource request from native Windows 8 Universal applications</a>
    * <a href="{{site.baseurl}}/tutorials/en/foundation/7.1/server-side-development-category/invoking-adapter-procedures-native-java-platform-micro-editions-java-applications/">Invoking adapter procedures from native Java Platform, Micro Editions (Java ME) applications</a>

* <a href="{{site.baseurl}}/tutorials/en/foundation/7.1/server-side-development-category/advanced-adapter-usage-mashup/">Advanced adapter usage and mashup</a>
* <a href="{{site.baseurl}}/tutorials/en/foundation/7.1/server-side-development-category/debugging-adapters/">Debugging adapters</a>
* <a href="{{site.baseurl}}/tutorials/en/foundation/7.1/server-side-development-category/cloudant/">Integrating with Cloudant by using an adapter</a>

### <a href="{{site.baseurl}}/tutorials/en/foundation/7.1/data/">Data</a>
<p>Add data-related functionality to your applications. Create apps that can run offline.</p>

* <a href="{{site.baseurl}}/tutorials/en/foundation/7.1/data/working-offline/">Working offline</a>
* <a href="{{site.baseurl}}/tutorials/en/foundation/7.1/data/storing-sensitive-data-in-encrypted-cache/">Storing sensitive data in encrypted cache</a>
* <a href="{{site.baseurl}}/tutorials/en/foundation/7.1/data/jsonstore/">JSONStore</a>
    * <a href="{{site.baseurl}}/tutorials/en/foundation/7.1/data/jsonstore/jsonstore-javascript-api/">Using JSONStore in Hybrid applications</a>
    * <a href="{{site.baseurl}}/tutorials/en/foundation/7.1/data/jsonstore/jsonstore-objective-c-api/">Using JSONStore in Native iOS applications</a>
    * <a href="{{site.baseurl}}/tutorials/en/foundation/7.1/data/jsonstore/jsonstore-java-api/">Using JSONStore in Native Android applications</a>

* <em>UPDATED: </em><a href="{{site.baseurl}}/tutorials/en/foundation/7.1/data/working-with-cloudant-nosql-db-api/">Working with Cloudant NoSQL DB API</a>
    * <a href="{{site.baseurl}}/tutorials/en/foundation/7.1/data/working-with-cloudant-nosql-db-api/ios/">iOS – Cloudant NoSQL DB API</a>
    * <a href="{{site.baseurl}}/tutorials/en/foundation/7.1/data/working-with-cloudant-nosql-db-api/android/">Android – Cloudant NoSQL DB API</a>

### <a href="{{site.baseurl}}/tutorials/en/foundation/7.1/adding-native-functionality/">Adding native functionality to hybrid applications with Apache Cordova</a>
<p>Use Apache Cordova with IBM MobileFirst Platform Foundation, and use native pages in hybrid applications.</p>

* <a href="{{site.baseurl}}/tutorials/en/foundation/7.1/adding-native-functionality/apache-cordova-overview/">Apache Cordova overview</a>
* Using native pages in hybrid applications
    * <a href="{{site.baseurl}}/tutorials/en/foundation/7.1/adding-native-functionality/ios-using-native-pages-hybrid-applications/">iOS – Using native pages in hybrid applications</a>
    * <a href="{{site.baseurl}}/tutorials/en/foundation/7.1/adding-native-functionality/android-using-native-pages-hybrid-applications/">Android – Using native pages in hybrid applications</a>
    * <a href="{{site.baseurl}}/tutorials/en/foundation/7.1/adding-native-functionality/windows-phone-8-using-native-pages-hybrid-applications/">Windows Phone 8 – Using native pages in hybrid applications</a>

* Adding native functionality to hybrid application with Apache Cordova plugin
    * <a href="{{site.baseurl}}/tutorials/en/foundation/7.1/adding-native-functionality/ios-adding-native-functionality-hybrid-application-apache-cordova-plugin/">iOS – Adding native functionality to hybrid application with an Apache Cordova plugin</a>
    * <a href="{{site.baseurl}}/tutorials/en/foundation/7.1/adding-native-functionality/android-adding-native-functionality-hybrid-application-apache-cordova-plugin/">Android – Adding native functionality to hybrid application with an Apache Cordova plugin</a>
    * <a href="{{site.baseurl}}/tutorials/en/foundation/7.1/adding-native-functionality/windows-phone-8-adding-native-functionality-hybrid-application-apache-cordova-plugin/">Windows Phone 8 – Adding native functionality to hybrid application with an Apache Cordova plugin</a>

* Adding native UI elements to hybrid applications
    * <a href="{{site.baseurl}}/tutorials/en/foundation/7.1/adding-native-functionality/ios-adding-native-ui-elements-hybrid-applications/">iOS – Adding native UI elements to hybrid applications</a>
    * <a href="{{site.baseurl}}/tutorials/en/foundation/7.1/adding-native-functionality/wp8-adding-native-ui-elements-hybrid-applications/">Windows Phone 8 – Adding native UI elements to hybrid applications</a>
    * <em>UPDATED: </em><a href="{{site.baseurl}}/tutorials/en/foundation/7.1/adding-native-functionality/android-adding-native-ui-elements-hybrid-applications/">Android – Adding native UI elements to hybrid applications</a>

### <a href="{{site.baseurl}}/tutorials/en/foundation/7.1/notifications/">Notifications</a>
<p>Send notifications to your mobile apps with IBM MobileFirst Platform Foundation.</p>

* <em>REVISED:</em> <a href="{{site.baseurl}}/tutorials/en/foundation/7.1/notifications/push-notifications-overview">Push Notifications Overview</a>
    * <a href="{{site.baseurl}}/tutorials/en/foundation/7.1/notifications/push-notifications-overview/push-notifications-in-hybrid-applications/">Push notifications in hybrid applications</a>
        * <a href="{{site.baseurl}}/tutorials/en/foundation/7.1/notifications/push-notifications-overview/push-notifications-in-hybrid-applications/event-source-notifications-in-hybrid-applications/">Event Source Notifications in Hybrid Applications</a>
        * <a href="{{site.baseurl}}/tutorials/en/foundation/7.1/notifications/push-notifications-overview/push-notifications-in-hybrid-applications/tag-based-notifications-in-hybrid-applications/">Tag and Broadcast Notifications in Hybrid Applications</a>

    * <a href="{{site.baseurl}}/tutorials/en/foundation/7.1/notifications/push-notifications-overview/push-notifications-native-ios-applications/">Push notifications in native iOS applications</a>
        * <a href="{{site.baseurl}}/tutorials/en/foundation/7.1/notifications/push-notifications-overview/push-notifications-native-ios-applications/event-source-based-notifications-in-native-ios-applications/">Event Source Notifications in Native iOS Applications</a>
        * <a href="{{site.baseurl}}/tutorials/en/foundation/7.1/notifications/push-notifications-overview/push-notifications-native-ios-applications/tag-based-notifications-in-native-ios-applications/">Tag and Broadcast Notifications in Native iOS Applications</a>
        * <a href="{{site.baseurl}}/tutorials/en/foundation/7.1/notifications/push-notifications-overview/push-notifications-native-ios-applications/interactive-and-silent-notifications-in-native-ios-applications/">Interactive and Silent Notifications in Native iOS Applications</a>

    * <a href="{{site.baseurl}}/tutorials/en/foundation/7.1/notifications/push-notifications-overview/push-notification-native-android-applications/">Push notifications in native Android applications</a>
        * <a href="{{site.baseurl}}/tutorials/en/foundation/7.1/notifications/push-notifications-overview/push-notification-native-android-applications/event-source-based-notifications-in-native-android-applications/">Event Source Notifications in Native Android Applications</a>
        * <a href="{{site.baseurl}}/tutorials/en/foundation/7.1/notifications/push-notifications-overview/push-notification-native-android-applications/tag-based-notifications-in-native-android-applications/">Tag and Broadcast Notifications in Native Android Applications</a>

    * <a href="{{site.baseurl}}/tutorials/en/foundation/7.1/notifications/push-notifications-overview/push-notifications-native-windows-phone-8-applications/">Push notifications in native Windows Phone 8 applications</a>
        * <a href="{{site.baseurl}}/tutorials/en/foundation/7.1/notifications/push-notifications-overview/push-notifications-native-windows-phone-8-applications/event-source-based-notifications-in-native-windows-phone-8-applications/">Event Source Notifications in Native Windows Phone 8 Applications</a>
        * <a href="{{site.baseurl}}/tutorials/en/foundation/7.1/notifications/push-notifications-overview/push-notifications-native-windows-phone-8-applications/tag-based-notifications-in-native-windows-phone-8-applications/">Tag and Broadcast Notifications in Native Windows Phone 8 Applications</a>

    * <a href="{{site.baseurl}}/tutorials/en/foundation/7.1/notifications/push-notifications-overview/push-notification-native-windows-8-applications/">Push notifications in native Windows 8 Universal applications</a>
       * <a href="{{site.baseurl}}/tutorials/en/foundation/7.1/notifications/push-notifications-overview/push-notification-native-windows-8-applications/event-source-based-notifications-in-native-windows-8-applications/">Event Source Notifications in Native Windows 8 Applications</a>
       * <a href="{{site.baseurl}}/tutorials/en/foundation/7.1/notifications/push-notifications-overview/push-notification-native-windows-8-applications/tag-based-notifications-in-native-windows-8-applications/">Tag and Broadcast Notifications in Native Windows 8 Applications</a>

* <a href="{{site.baseurl}}/tutorials/en/foundation/7.1/notifications/sms-notifications/">SMS Notification</a>
* <a href="{{site.baseurl}}/tutorials/en/foundation/7.1/notifications/two-way-sms-communication/">Two-way SMS communication</a>

### <a href="{{site.baseurl}}/tutorials/en/foundation/7.1/authentication-security/">Authentication and security</a>
<p>Protect your applications and adapter procedures against unauthorized access by using authentication, login modules, and device provisioning.</p>

* <a href="{{site.baseurl}}/tutorials/en/foundation/7.1/authentication-security/authentication-concepts/">Authentication concepts</a>
    * <a href="{{site.baseurl}}/tutorials/en/foundation/7.1/authentication-security/authentication-concepts/classic-security-model/" target="_blank">Classic security model</a>
    * <a href="{{site.baseurl}}/tutorials/en/foundation/7.1/authentication-security/authentication-concepts/oauth-based-security-model/" target="_blank">OAuth-based security model</a>

* <a href="{{site.baseurl}}/tutorials/en/foundation/7.1/authentication-security/form-based-authentication/">Form-based authentication</a>
    * <a href="{{site.baseurl}}/tutorials/en/foundation/7.1/authentication-security/form-based-authentication/form-based-authentication-hybrid-applications/">Form-based authentication in hybrid applications</a>
    * <a href="{{site.baseurl}}/tutorials/en/foundation/7.1/authentication-security/form-based-authentication/form-based-authentication-native-ios-applications/"> Form-based authentication in native iOS applications</a>
    * <a href="{{site.baseurl}}/tutorials/en/foundation/7.1/authentication-security/form-based-authentication/form-based-authentication-native-android-applications/">Form-based authentication in native Android applications</a>
    * <a href="{{site.baseurl}}/tutorials/en/foundation/7.1/authentication-security/form-based-authentication/form-based-authentication-native-windows-phone-8-applications/">Form-based authentication in native Windows Phone 8 applications</a>
    * <a href="{{site.baseurl}}/tutorials/en/foundation/7.1/authentication-security/form-based-authentication/form-based-authentication-in-native-windows-8-applications/">Form-based authentication in native Windows 8 applications</a>

* <a href="{{site.baseurl}}/tutorials/en/foundation/7.1/authentication-security/adapter-based-authentication/">Adapter-based authentication</a>
    * <a href="{{site.baseurl}}/tutorials/en/foundation/7.1/authentication-security/adapter-based-authentication/adapter-based-authentication-hybrid-applications/">Adapter-based authentication in hybrid applications</a>
    * <a href="{{site.baseurl}}/tutorials/en/foundation/7.1/authentication-security/adapter-based-authentication/adapter-based-authentication-native-ios-applications/">Adapter-based authentication in native iOS applications</a>
    * <a href="{{site.baseurl}}/tutorials/en/foundation/7.1/authentication-security/adapter-based-authentication/adapter-based-authentication-native-android-applications/">Adapter-based authentication in native Android applications</a>
    * <a href="{{site.baseurl}}/tutorials/en/foundation/7.1/authentication-security/adapter-based-authentication/adapter-based-authentication-native-windows-phone-8-applications/">Adapter-based authentication in native Windows Phone 8 applications</a>
    * <a href="{{site.baseurl}}/tutorials/en/foundation/7.1/authentication-security/adapter-based-authentication/adapter-based-authentication-native-windows-8-applications/">Adapter-based authentication in native Windows 8 applications</a>

* <a href="{{site.baseurl}}/tutorials/en/foundation/7.1/authentication-security/custom-authentication/">Custom Authentication</a>
    * <a href="{{site.baseurl}}/tutorials/en/foundation/7.1/authentication-security/custom-authentication/custom-authentication-hybrid-applications/">Custom authentication in hybrid applications</a>
    * <a href="{{site.baseurl}}/tutorials/en/foundation/7.1/authentication-security/custom-authentication/custom-authentication-native-ios-applications/"> Custom authentication in native iOS applications</a>
    * <a href="{{site.baseurl}}/tutorials/en/foundation/7.1/authentication-security/custom-authentication/custom-authentication-in-native-android-applications/">Custom authentication in native Android applications</a>
    * <a href="{{site.baseurl}}/tutorials/en/foundation/7.1/authentication-security/custom-authentication/custom-authentication-in-native-windows-phone-8-applications/">Custom authentication in native Windows Phone 8 applications</a>
    * <a href="{{site.baseurl}}/tutorials/en/foundation/7.1/authentication-security/custom-authentication/custom-authentication-in-native-windows-8-applications/">Custom authentication in native Windows 8 applications</a>

* <a href="{{site.baseurl}}/tutorials/en/foundation/7.1/authentication-security/using-ldap-login-module-to-authenticate-users-with-ldap-server-in-hybrid-applications/">Using LDAP Login Module to authenticate users with LDAP server in hybrid applications</a>
* <a href="{{site.baseurl}}/tutorials/en/foundation/7.1/authentication-security/websphere-ltpa-based-authentication/">WebSphere LTPA-based authentication</a>
* <a href="{{site.baseurl}}/tutorials/en/foundation/7.1/authentication-security/device-provisioning-concepts/">Device provisioning concepts</a>
* <a href="{{site.baseurl}}/tutorials/en/foundation/7.1/authentication-security/custom-device-provisioning/">Custom device provisioning</a>
* <em>UPDATED: </em><a href="{{site.baseurl}}/tutorials/en/foundation/7.1/authentication-security/application-authenticity-protection/">Application Authenticity Protection</a>
    * <a href="{{site.baseurl}}/tutorials/en/foundation/7.1/authentication-security/application-authenticity-protection/application-authenticity-protection-hybrid-applications/">Application Authenticity Protection in Hybrid applications</a>
    * <a href="{{site.baseurl}}/tutorials/en/foundation/7.1/authentication-security/application-authenticity-protection/application-authenticity-protection-native-ios/">Application Authenticity Protection in Native iOS applications</a>
    * <a href="{{site.baseurl}}/tutorials/en/foundation/7.1/authentication-security/application-authenticity-protection/application-authenticity-protection-native-android-applications/">Application Authenticity Protection in Native Android applications</a>
    * <a href="{{site.baseurl}}/tutorials/en/foundation/7.1/authentication-security/application-authenticity-protection/application-authenticity-protection-in-native-windows-universal-applications/">Application Authenticity Protection in Native Windows Universal applications</a>

* <a href="{{site.baseurl}}/tutorials/en/foundation/7.1/authentication-security/client-x-509-certificate-authentication-user-enrollment/">Client X.509 Certificate Authentication and User Enrollment</a>
* <em>UPDATED: </em><a href="{{site.baseurl}}/tutorials/en/foundation/7.1/authentication-security/using-mobilefirst-server-authenticate-external-resources/">Using the MobileFirst Server to authenticate external resources</a>

### <a href="{{site.baseurl}}/tutorials/en/foundation/7.1/advanced-topics/">Advanced topics</a>
<p>Tutorials showcasing "recipes" of advanced functionalities such as: "Remember Me", Offline authentication, device enrollment, remote loading of dynamic content and more.</p>

* <em>NEW: </em><a href="{{site.baseurl}}/tutorials/en/foundation/7.1/advanced-topics/ntlm-authentication/">NTLM Authentication</a>
* <em>NEW: </em><a href="{{site.baseurl}}/tutorials/en/foundation/7.1/advanced-topics/remember-me/">Remember Me</a>
* <em>NEW: </em><a href="{{site.baseurl}}/tutorials/en/foundation/7.1/advanced-topics/two-step-adapter-authentication/">Two-Step adapter authentication</a>
* <a href="{{site.baseurl}}/tutorials/en/foundation/7.1/advanced-topics/offline-authentication/">Offline Authentication</a>
* <a href="{{site.baseurl}}/tutorials/en/foundation/7.1/advanced-topics/device-enrollment/">Device Enrollment</a>
* <a href="{{site.baseurl}}/tutorials/en/foundation/7.1/advanced-topics/working-with-beacons/">Working with Beacons</a>
    * <a href="{{site.baseurl}}/tutorials/en/foundation/7.1/advanced-topics/working-with-beacons/beacons-in-ios/">Beacons in iOS</a>
    * <a href="{{site.baseurl}}/tutorials/en/foundation/7.1/advanced-topics/working-with-beacons/beacons-in-android/">Beacons in Android</a>

* <a href="{{site.baseurl}}/tutorials/en/foundation/7.1/advanced-topics/integrating-server-generated-pages-hybrid-applications/">Integrating server-generated pages in hybrid applications</a>
* <a href="{{site.baseurl}}/tutorials/en/foundation/7.1/advanced-topics/using-a-mobilefirst-application-as-a-container-for-server-generated-pages/">Using MobileFirst application as a container for server-generated pages</a>
* <a href="{{site.baseurl}}/tutorials/en/foundation/7.1/advanced-topics/container-advanced-pages/">Container for advanced pages</a>
* <a href="{{site.baseurl}}/tutorials/en/foundation/7.1/advanced-topics/accelerating-application-development-reusing-resources/">Accelerating application development by reusing resources</a>
* <a href="{{site.baseurl}}/tutorials/en/foundation/7.1/advanced-topics/testing-mobilefirst-platform-applications-mobile-test-workbench/">Testing MobileFirst applications with IBM MobileFirst Platform Test Workbench</a>

### <a href="{{site.baseurl}}/tutorials/en/foundation/7.1/moving-production/">Moving to production</a>
<p>Move the apps that you create from your development environment to the production environment.</p>

* <a href="{{site.baseurl}}/tutorials/en/foundation/7.1/moving-production/moving-development-environment-stand-alone-qa-production-servers/">Moving from development environment to stand-alone QA and production servers</a>
* <a href="{{site.baseurl}}/tutorials/en/foundation/7.1/moving-production/operational-analytics/">Operational Analytics</a>
* <a href="{{site.baseurl}}/tutorials/en/foundation/7.1/moving-production/reports-analytics/">Reports and analytics</a>
* <a href="{{site.baseurl}}/tutorials/en/foundation/7.1/moving-production/distributing-mobile-applications-with-application-center/">Distributing mobile applications with Application Center</a>
